class CFAException(Exception):
    """Generic CFA Exception, we can probably expand this later"""