@startuml cfa_class_diagram
left to right direction

class CFADataset #lightskyblue{
    +int id
    +str path
    +str format
}

object AggregationContainer #lightskyblue-white{
}

class CFAGroup #lightskyblue{
    +int ngrps
    +int nvars
    +int ndims
    +str name
    -int cfa_id
    -int parent_id
    +CFADimension addDim()
    +list[CFADimension] getDims()
    +CFADimension getDim()
    +str getDimName()
    +CFAVariable addVar()
    +list[CFAVariables] getVars()
    +str getVarName()
    +CFAVariable getVar()
    +CFAGroup addGrp()
    +list[CFAGroup] getGrps()
    +CFAGroup getGrp()
    +str getGrpName()
}

class CFADimension #hotpink{
    -int parent_id
    -int cfa_id
    +str name
    +int len
    +DataType type
}

object AggregatedDimension #hotpink-white{
}

class CFAVariable #coral{
    +str name
    +int ndims
    -int cfa_id
    -int parent_id
    +None setAggInstr()
    +None setFragNum()
    +None setFrag()
    +list[CFADimensions] getDims()
    +CFADimension getDim()
    +str getDimName()
    +list[int] getFragDef()
    +int getFragDimLen()
    +CFAFragment getFrag()
}

object AggregationVariable #coral-white{
}

class CFAFragment #cyan{
    +list[int] location
    +list[int] index
    +str file
    +str format
    +str address
    +str units
    +DataType cfa_dtype
}

object Fragment #cyan-white{

}

class CFAException{

}

CFADataset ---|> CFAGroup
CFADimension --o CFAGroup
CFAVariable --o CFAGroup
CFAFragment --o CFAVariable

CFAException --* CFAGroup
CFAException --* CFAVariable
CFAException --* CFADimension
CFAException --* CFADataset
CFAException --* CFAFragment

CFADataset --* AggregationContainer
CFAGroup --* AggregationContainer
CFADimension --* AggregatedDimension
CFAVariable --* AggregationVariable

CFAFragment --* Fragment
@enduml
